#pragma once

#include <QObject>
#include <QString>
#include "platform/Registry.h"

/**
 * @brief 设置模型（Q_PROPERTY + 注册表持久化）
 *
 * 所有设置项通过 Q_PROPERTY 暴露给 ViewModel/QML
 * 注册表键路径：HKCU\Software\AutoLogin\Settings
 * 自启键：HKCU\Software\Microsoft\Windows\CurrentVersion\Run\AutoLogin
 */
class Settings : public QObject {
    Q_OBJECT

    Q_PROPERTY(bool clickToAuth READ clickToAuth WRITE setClickToAuth NOTIFY clickToAuthChanged)
    Q_PROPERTY(bool autostart READ autostart WRITE setAutostart NOTIFY autostartChanged)
    Q_PROPERTY(bool notifications READ notifications WRITE setNotifications NOTIFY notificationsChanged)
    Q_PROPERTY(bool autoHotspot READ autoHotspot WRITE setAutoHotspot NOTIFY autoHotspotChanged)
    Q_PROPERTY(bool highPriority READ highPriority WRITE setHighPriority NOTIFY highPriorityChanged)
    Q_PROPERTY(bool schedEnabled READ schedEnabled WRITE setSchedEnabled NOTIFY schedEnabledChanged)
    Q_PROPERTY(int schedInterval READ schedInterval WRITE setSchedInterval NOTIFY schedIntervalChanged)
    Q_PROPERTY(int schedOffset READ schedOffset WRITE setSchedOffset NOTIFY schedOffsetChanged)
    Q_PROPERTY(QString username READ username WRITE setUsername NOTIFY usernameChanged)
    Q_PROPERTY(QString password READ password WRITE setPassword NOTIFY passwordChanged)
    Q_PROPERTY(int theme READ theme WRITE setTheme NOTIFY themeChanged)

public:
    explicit Settings(QObject *parent = nullptr);

    /** 从注册表加载所有设置 */
    void load();

    /** 保存所有设置到注册表 */
    void save();

    // === Getters ===
    bool clickToAuth() const { return m_clickToAuth; }
    bool autostart() const { return m_autostart; }
    bool notifications() const { return m_notifications; }
    bool autoHotspot() const { return m_autoHotspot; }
    bool highPriority() const { return m_highPriority; }
    bool schedEnabled() const { return m_schedEnabled; }
    int schedInterval() const { return m_schedInterval; }
    int schedOffset() const { return m_schedOffset; }
    QString username() const { return m_username; }
    QString password() const { return m_password; }
    int theme() const { return m_theme; }

    // === Setters ===
    void setClickToAuth(bool v);
    void setAutostart(bool v);
    void setNotifications(bool v);
    void setAutoHotspot(bool v);
    void setHighPriority(bool v);
    void setSchedEnabled(bool v);
    void setSchedInterval(int v);
    void setSchedOffset(int v);
    void setUsername(const QString &v);
    void setPassword(const QString &v);
    void setTheme(int v);

signals:
    void clickToAuthChanged();
    void autostartChanged();
    void notificationsChanged();
    void autoHotspotChanged();
    void highPriorityChanged();
    void schedEnabledChanged();
    void schedIntervalChanged();
    void schedOffsetChanged();
    void usernameChanged();
    void passwordChanged();
    void themeChanged();
    void settingsChanged();

private:
    static constexpr const char *kRegPath = "Software\\AutoLogin\\Settings";

    bool    m_clickToAuth   = true;
    bool    m_autostart     = true;
    bool    m_notifications = true;
    bool    m_autoHotspot   = false;
    bool    m_highPriority  = false;
    bool    m_schedEnabled  = false;
    int     m_schedInterval = 3;
    int     m_schedOffset   = 0;
    QString m_username;
    QString m_password;
    int     m_theme         = 0; // 0=Dark, 1=Light
};
